# ParallelGOL

./: .gitignore  Barrier.hpp  CMakeLists.txt  Game.hpp  GameOfLife  Headers.hpp  PCQueue.hpp  README.md  Semaphore.hpp  Thread.hpp  create_git.sh  main.cpp  makefile  times.py  tiny.txt  utils.hpp
.github/workflows/: c-cpp.yml  cmake.yml
Code_Skeleton/: ._Game.hpp  ._PCQueue.hpp  .depend  Barrier.hpp  Game.cpp  Game.hpp  GameOfLife  PCQueue.cpp  PCQueue.hpp  PCQueue_SEM.hpp  Semaphore.cpp  Semaphore.hpp  Thread.hpp  big.txt  main.cpp  makefile  results copy.csv  results.csv  small.txt  small_run_expected_on_10_gens.txt  times.py  utils.cpp  utils.hpp
Code_Skeleton/Part1/: Headers.hpp  PCQueue.cpp  PCQueue.hpp  Semaphore.cpp  Semaphore.hpp
Code_Skeleton/Part2/: Game.cpp  Game.hpp  Thread.hpp  main.cpp  utils.cpp  utils.hpp
Tools/GameOfLife/org/bitstorm/util/: license.txt  manual.txt
Tools/example_IO_files/: mid.txt  small.txt  tiny.txt
Tools/rle_deocder/: rle_decoder.pl  rle_example.rle
